Remove oauth token

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -4,12 +4,8 @@
 	signingkey = 1B5E5824F4429D036C8A17517CA109C3974AF5FA
 [credential]
 	helper = cache --timeout=7200
-[github]
-	oauth-token = ecc06b341b3246660fb1c6426f60077e2cac5dd1
-	user = patrl
-[hub]
-	username = patrl
-	oauthtoken = c7548103c78c71200d0a314569ae0031371603f5
+[include]
+	path = ~/.config/git/config.local
 [core]
 	excludesfiles = /home/patrl/.gitignore_global
 	pager = diff-so-fancy | less --tabs=4 -RFX
