--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -34,7 +34,7 @@ buffer_search_case_sensitive = off
 buffer_search_force_default = off
 buffer_search_regex = off
 buffer_search_where = prefix_message
-buffer_time_format = "%H:%M:%S"
+buffer_time_format = "${color:252}%H${color:245}%M${color:240}%S"
 color_basic_force_bold = off
 color_inactive_buffer = on
 color_inactive_message = off
@@ -145,14 +145,14 @@ chat_bg = default
 chat_buffer = white
 chat_channel = white
 chat_day_change = cyan
-chat_delimiters = green
+chat_delimiters = 29
 chat_highlight = yellow
 chat_highlight_bg = magenta
-chat_host = cyan
+chat_host = 24
 chat_inactive_buffer = default
 chat_inactive_window = default
 chat_nick = lightcyan
-chat_nick_colors = "cyan,magenta,green,brown,lightblue,lightcyan,lightmagenta,lightgreen,blue"
+chat_nick_colors = "cyan,magenta,green,brown,lightblue,default,lightcyan,lightmagenta,lightgreen,blue,31,35,38,40,49,63,70,80,92,99,112,126,130,138,142,148,160,162,167,169,174,176,178,184,186,210,212,215,247"
 chat_nick_offline = default
 chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = blue
@@ -168,7 +168,7 @@ chat_prefix_join = lightgreen
 chat_prefix_more = lightmagenta
 chat_prefix_network = magenta
 chat_prefix_quit = lightred
-chat_prefix_suffix = green
+chat_prefix_suffix = 24
 chat_read_marker = magenta
 chat_read_marker_bg = default
 chat_server = brown
@@ -184,9 +184,9 @@ emphasized_bg = magenta
 input_actions = lightgreen
 input_text_not_found = red
 item_away = yellow
-nicklist_away = cyan
+nicklist_away = 244
 nicklist_group = green
-separator = blue
+separator = 60
 status_count_highlight = magenta
 status_count_msg = brown
 status_count_other = default
@@ -313,7 +313,7 @@ nicklist.separator = on
 nicklist.size = 0
 nicklist.size_max = 0
 nicklist.type = window
-status.color_bg = blue
+status.color_bg = 60
 status.color_delim = cyan
 status.color_fg = default
 status.conditions = ""
@@ -327,7 +327,7 @@ status.separator = off
 status.size = 1
 status.size_max = 0
 status.type = window
-title.color_bg = blue
+title.color_bg = 60
 title.color_delim = cyan
 title.color_fg = default
 title.conditions = ""
