--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -180,7 +180,7 @@ freenode.local_hostname
 freenode.usermode
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#nixos,#reflex-frp,#haskell-beginners,#haskell"
+freenode.autojoin = "#nixos,#reflex-frp,#haskell-beginners,#haskell,#emacs,#org-mode,#latex"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -275,3 +275,44 @@ mozilla.msg_part
 mozilla.msg_quit
 mozilla.notify
 mozilla.split_msg_max_length
+quakenet.addresses = "irc.quakenet.org"
+quakenet.proxy
+quakenet.ipv6
+quakenet.ssl
+quakenet.ssl_cert
+quakenet.ssl_priorities
+quakenet.ssl_dhkey_size
+quakenet.ssl_fingerprint
+quakenet.ssl_verify
+quakenet.password
+quakenet.capabilities
+quakenet.sasl_mechanism
+quakenet.sasl_username
+quakenet.sasl_password
+quakenet.sasl_key
+quakenet.sasl_timeout
+quakenet.sasl_fail
+quakenet.autoconnect = on
+quakenet.autoreconnect
+quakenet.autoreconnect_delay
+quakenet.nicks
+quakenet.nicks_alternate
+quakenet.username
+quakenet.realname
+quakenet.local_hostname
+quakenet.usermode
+quakenet.command
+quakenet.command_delay
+quakenet.autojoin = "#rgrd"
+quakenet.autorejoin
+quakenet.autorejoin_delay
+quakenet.connection_timeout
+quakenet.anti_flood_prio_high
+quakenet.anti_flood_prio_low
+quakenet.away_check
+quakenet.away_check_max_nicks
+quakenet.msg_kick
+quakenet.msg_part
+quakenet.msg_quit
+quakenet.notify
+quakenet.split_msg_max_length
