--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -21,14 +21,17 @@ draw_bold_text_with_bright_colors: true
 font:
   normal:
     family: "Input Mono"
+    # family: "IBM Plex Mono"
     style: Regular
 
   bold:
     family: "Input Mono"
+    # family: "IBM Plex Mono"
     style: Bold
 
   italic:
     family: "Input Mono"
+    # family: "IBM Plex Mono"
     style: Italic
 
   size: 8.0
