--- a/mbsync/.mbsyncrc
+++ b/mbsync/.mbsyncrc
@@ -12,8 +12,8 @@ SSLVersion TLSv1.2
 IMAPAccount zas
 Host outlook.office365.com
 User elliott@leibniz-zas.de
-PassCmd "gpg2 -q --for-your-eyes-only --no-tty -d ~/.password-store/zas/password.gpg"
-AuthMechs LOGIN
+PassCmd "gpg2 -q --for-your-eyes-only --no-tty -d ~/.password-store/zas/passwork_new_new.gpg"
+AuthMechs PLAIN
 SSLType IMAPS
 SSLVersion TLSv1.2
 
