--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -180,7 +180,7 @@ freenode.local_hostname
 freenode.usermode
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#nixos,#reflex-frp,#haskell-beginners,#haskell,#emacs,#org-mode,#latex"
+freenode.autojoin = "#nixos,#reflex-frp,#haskell-beginners,#haskell,#emacs,#org-mode,#latex,#dat"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
