--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -48,43 +48,34 @@ font:
 
 render_timer: false
 
-custom_cursor_colors: false
-
-# dracula
+# Colors (Dracula)
 colors:
+  # Default colors
   primary:
-    background: 0x282a36
-    foreground: 0xf8f8f2
-  cursor:
-    text: 0x44475a
-    cursor: 0xf8f8f2
+    background: '0x282a36'
+    foreground: '0xf8f8f2'
+
+  # Normal colors
   normal:
-    black: 0x282a36
-    red: 0xff5555
-    green: 0x50fa7b
-    yellow: 0xf1fa8c
-    blue: 0x6272a4
-    magenta: 0xff79c6
-    cyan: 0x8be9fd
-    white: 0xf8f8f2
+    black:   '0x000000'
+    red:     '0xff5555'
+    green:   '0x50fa7b'
+    yellow:  '0xf1fa8c'
+    blue:    '0xcaa9fa'
+    magenta: '0xff79c6'
+    cyan:    '0x8be9fd'
+    white:   '0xbfbfbf'
+
+  # Bright colors
   bright:
-    black: 0x44475a
-    red: 0xff8888
-    green: 0x82fba0
-    yellow: 0xf7fcbd
-    blue: 0x828fb7
-    magenta: 0xffacdc
-    cyan: 0xbdf3fe
-    white: 0xffffff
-  dim:
-    black: 0x14151b
-    red: 0xff2222
-    green: 0x1ef956
-    yellow: 0xebf85b
-    blue: 0x4d5b86
-    magenta: 0xff46b0
-    cyan: 0x59dffc
-    white: 0xe6e6d1
+    black:   '0x282a35'
+    red:     '0xff6e67'
+    green:   '0x5af78e'
+    yellow:  '0xf4f99d'
+    blue:    '0xcaa9fa'
+    magenta: '0xff92d0'
+    cyan:    '0x9aedfe'
+    white:   '0xe6e6e6'
 
 visual_bell:
   animation: EaseOutExpo
@@ -99,18 +90,18 @@ mouse:
   double_click: { threshold: 300 }
   triple_click: { threshold: 300 }
   
-  faux_scrollback_lines: 1
+  faux_scrolling_lines: 1
+
+  hide_when_typing: false
 
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
 
 dynamic_title: true
   
-hide_cursor_when_typing: false
-
-cursor_style: Block
-
-unfocused_hollow_cursor: true
+cursor:
+        style: Block
+        unfocused_hollow: true
 
 live_config_reload: true
 
