--- a/ncmpcpp/.config/ncmpcpp/config
+++ b/ncmpcpp/.config/ncmpcpp/config
@@ -11,14 +11,14 @@
 ## ncmpcpp.
 ##
 #
-ncmpcpp_directory = ~/.config/ncmpcpp
+# ncmpcpp_directory = ~/.config/ncmpcpp
 #
 ##
 ## Directory for storing downloaded lyrics. It defaults to ~/.lyrics since other
 ## MPD clients (eg. ncmpc) also use that location.
 ##
 #
-lyrics_directory = ~/.lyrics
+# lyrics_directory = ~/.lyrics
 #
 ##### connection settings #####
 #
@@ -30,7 +30,7 @@ lyrics_directory = ~/.lyrics
 #
 ## Needed for tag editor and file operations to work.
 ##
-mpd_music_dir = ~/Sync/music
+mpd_music_dir = "/home/patrl/Sync/music/"
 #
 #mpd_crossfade_time = 5
 #
