--- a/wm/.config/polybar/config
+++ b/wm/.config/polybar/config
@@ -10,7 +10,7 @@ secondary = #e60053
 alert = #bd2c40
 
 [bar/example]
-;monitor = ${env:MONITOR:HDMI-1}
+monitor = eDP1
 width = 100%
 height = 54
 ;offset-x = 1%
@@ -114,13 +114,13 @@ label-empty-padding = 2
 ; Separator in between workspaces
 ; label-separator = |
 ;
-ws-icon-0 = I;
-ws-icon-1 = II;
-ws-icon-2 = III;
-ws-icon-3 = IV;
-ws-icon-4 = V;
-ws-icon-5 = VI;
-ws-icon-6 = VII;
+; ws-icon-0 = I;
+; ws-icon-1 = II;
+; ws-icon-2 = III;
+; ws-icon-3 = IV;
+; ws-icon-4 = V;
+; ws-icon-5 = VI;
+; ws-icon-6 = VII;
 ws-icon-default = 
 
 ; [module/mpd]
