--- a/wm/.config/polybar/config
+++ b/wm/.config/polybar/config
@@ -10,7 +10,7 @@ secondary = #e60053
 alert = #bd2c40
 
 [bar/example]
-monitor = eDP1
+monitor = eDP-1
 width = 100%
 height = 54
 ;offset-x = 1%
@@ -138,7 +138,6 @@ ws-icon-default = 
 
 [module/xbacklight]
 type = internal/xbacklight
-
 format = <label> <bar>
 label = 
 
@@ -153,10 +152,10 @@ bar-empty = ─
 bar-empty-font = 2
 bar-empty-foreground = ${colors.foreground-alt}
 
-; [module/backlight-acpi]
-; inherit = module/xbacklight
-; type = internal/backlight
-; card = intel_backlight
+[module/backlight-acpi]
+inherit = module/xbacklight
+type = internal/backlight
+card = intel_backlight
 
 [module/cpu]
 type = internal/cpu
