--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,1 +1,9 @@
 AddKeysToAgent confirm
+
+# Added automatically by git-annex
+Host git-annex-shenzhou.whatbox.ca-patrl_22_annex
+	Hostname shenzhou.whatbox.ca
+	Port 22
+	IdentityFile ~/.ssh/git-annex/key.git-annex-shenzhou.whatbox.ca-patrl_22_annex
+	IdentitiesOnly yes
+	StrictHostKeyChecking yes
