--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -6,20 +6,20 @@ window:
     y: 10
   decorations: none
 
-# font:
-#   normal:
-#     family: 'SF Mono'
-#     style: Regular
-#   bold:
-#     family: 'SF Mono'
-#     style: Bold
-#   italic:
-#     family: 'SF Mono'
-#     style: Italic
-#   bold_italic:
-#     family: 'SF Mono'
-#     style: Bold Italic
-#   size: 12.0
+font:
+  normal:
+    family: 'CascadiaPL'
+    style: Regular
+  # bold:
+  #   family: 'CascadiaPL'
+  #   style: Bold
+  # italic:
+  #   family: 'CascadiaPL'
+  #   style: Italic
+  # bold_italic:
+  #   family: 'CascadiaPL'
+  #   style: Bold Italic
+  size: 12.0
 
 # Colors (Dracula)
 colors:
