--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -8,16 +8,16 @@ window:
 
 font:
   normal:
-    family: 'CascadiaPL'
+    family: 'BlexMono Nerd Font'
     style: Regular
   # bold:
-  #   family: 'CascadiaPL'
+  #   family: 'BlexMono Nerd Font'
   #   style: Bold
   # italic:
-  #   family: 'CascadiaPL'
+  #   family: 'BlexMono Nerd Font'
   #   style: Italic
   # bold_italic:
-  #   family: 'CascadiaPL'
+  #   family: 'BlexMono Nerd Font'
   #   style: Bold Italic
   size: 12.0
 
