Refactored mbsync config

--- a/programs/isync/mbsync.conf
+++ b/programs/isync/mbsync.conf
@@ -9,32 +9,17 @@ AuthMechs LOGIN
 SSLType IMAPS
 SSLVersion TLSv1.2
 
-IMAPAccount zas
-Host outlook.office365.com
-User elliott@leibniz-zas.de
-PassCmd "gpg2 -q --for-your-eyes-only --no-tty -d ~/.password-store/zas/elliott@leibniz-zas.de.gpg"
-AuthMechs PLAIN
-SSLType IMAPS
-SSLVersion TLSv1.2
-
 IMAPStore personal-remote
-Account personal 
-
-IMAPStore zas-remote
-Account zas
+Account personal
 
 MaildirStore personal-local
 Path ~/.mail/personal/
 Inbox ~/.mail/personal/Inbox
 
-MaildirStore zas-local
-Path ~/.mail/zas/
-Inbox ~/.mail/zas/Inbox
-
 Channel personal-inbox
 Master :personal-remote:
 Slave :personal-local:
-Patterns "INBOX" 
+Patterns "INBOX"
 Create Slave
 Remove Slave
 SyncState *
@@ -60,31 +45,59 @@ Create Slave
 Remove Slave
 SyncState *
 
-Channel zas-trash
-Master :zas-remote:"Deleted Items"
-Slave :zas-local:trash
+Group personal
+Channel personal-inbox
+Channel personal-sent
+Channel personal-trash
+Channel personal-all
+Channel personal-starred
+
+IMAPAccount mit
+Host imap.exchange.mit.edu
+User pdell@mit.edu
+PassCmd "gpg2 -q --for-your-eyes-only --no-tty -d ~/.password-store/mit/kerberos.gpg"
+AuthMechs PLAIN
+SSLType IMAPS
+SSLVersion TLSv1.2
+
+IMAPStore mit-remote
+Account mit
+
+MaildirStore mit-local
+Path ~/.mail/mit/
+Inbox ~/.mail/mit/Inbox
+
+Channel mit-trash
+Master :mit-remote:"Deleted Items"
+Slave :mit-local:trash
 Create Slave
 Remove Slave
 SyncState *
 
-Channel zas-inbox
-Master :zas-remote:
-Slave :zas-local:
+Channel mit-inbox
+Master :mit-remote:
+Slave :mit-local:
 Patterns "INBOX"
 Create Slave
 Remove Slave
 SyncState *
 
-Channel zas-sent
-Master :zas-remote:"Sent Items"
-Slave :zas-local:sent
+Channel mit-sent
+Master :mit-remote:"Sent Items"
+Slave :mit-local:sent
 Create Slave
 Remove Slave
 SyncState *
 
-Channel zas-archive
-Master :zas-remote:"Archive"
-Slave :zas-local:archive
+Channel mit-archive
+Master :mit-remote:"Archive"
+Slave :mit-local:archive
 Create Slave
 Remove Slave
 SyncState *
+
+Group personal
+Channel mit-inbox
+Channel mit-sent
+Channel mit-trash
+Channel mit-archive
