fixed some stuff in mbsync

--- a/programs/isync/mbsync.conf
+++ b/programs/isync/mbsync.conf
@@ -49,7 +49,7 @@ Group personal
 Channel personal-inbox
 Channel personal-sent
 Channel personal-trash
-Channel personal-all
+Channel personal-archive
 Channel personal-starred
 
 IMAPAccount mit
@@ -96,7 +96,7 @@ Create Slave
 Remove Slave
 SyncState *
 
-Group personal
+Group mit
 Channel mit-inbox
 Channel mit-sent
 Channel mit-trash
