--- a/programs/isync/mbsync.conf
+++ b/programs/isync/mbsync.conf
@@ -1,5 +1,5 @@
 # Sync All            # set to Sync Pull during setup
-# Expunge Both        # delete mail on both sides, set to Slave during setup
+# Expunge Both        # delete mail on both sides, set to Near during setup
 
 IMAPAccount personal
 Host imap.gmail.com
@@ -17,32 +17,32 @@ Path ~/.mail/personal/
 Inbox ~/.mail/personal/Inbox
 
 Channel personal-inbox
-Master :personal-remote:
-Slave :personal-local:
+Far :personal-remote:
+Near :personal-local:
 Patterns "INBOX"
-Create Slave
-Remove Slave
+Create Near
+Remove Near
 SyncState *
 
 Channel personal-trash
-Master :personal-remote:"[Google Mail]/Bin"
-Slave :personal-local:trash
-Create Slave
-Remove Slave
+Far :personal-remote:"[Google Mail]/Bin"
+Near :personal-local:trash
+Create Near
+Remove Near
 SyncState *
 
 Channel personal-sent
-Master :personal-remote:"[Google Mail]/Sent Mail"
-Slave :personal-local:sent
-Create Slave
-Remove Slave
+Far :personal-remote:"[Google Mail]/Sent Mail"
+Near :personal-local:sent
+Create Near
+Remove Near
 SyncState *
 
 Channel personal-archive
-Master :personal-remote:"[Google Mail]/All Mail"
-Slave :personal-local:archive
-Create Slave
-Remove Slave
+Far :personal-remote:"[Google Mail]/All Mail"
+Near :personal-local:archive
+Create Near
+Remove Near
 SyncState *
 
 Group personal
@@ -67,32 +67,32 @@ Path ~/.mail/mit/
 Inbox ~/.mail/mit/Inbox
 
 Channel mit-trash
-Master :mit-remote:"Deleted Items"
-Slave :mit-local:trash
-Create Slave
-Remove Slave
+Far :mit-remote:"Deleted Items"
+Near :mit-local:trash
+Create Near
+Remove Near
 SyncState *
 
 Channel mit-inbox
-Master :mit-remote:
-Slave :mit-local:
+Far :mit-remote:
+Near :mit-local:
 Patterns "INBOX"
-Create Slave
-Remove Slave
+Create Near
+Remove Near
 SyncState *
 
 Channel mit-sent
-Master :mit-remote:"Sent Items"
-Slave :mit-local:sent
-Create Slave
-Remove Slave
+Far :mit-remote:"Sent Items"
+Near :mit-local:sent
+Create Near
+Remove Near
 SyncState *
 
 Channel mit-archive
-Master :mit-remote:"Archive"
-Slave :mit-local:archive
-Create Slave
-Remove Slave
+Far :mit-remote:"Archive"
+Near :mit-local:archive
+Create Near
+Remove Near
 SyncState *
 
 Group mit
