--- a/programs/polybar/polybar.conf
+++ b/programs/polybar/polybar.conf
@@ -49,7 +49,8 @@ tray-position = right
 tray-padding = 4
 ;tray-transparent = true
 ;tray-background = #0063ff
-tray-maxsize = 32
+; tray-maxsize = 32
+tray-maxsize = 64
 
 wm-restack = bspwm
 ;wm-restack = i3
